# ookla-raster-dataset

./: .dockerignore  Dockerfile  README.md  boto3process2.py  dataset_download.py  docker-compose.yml  main.py  make_raster_layer.py  makeooklaraster.py  mercantile_raster_layer.py  ookla_tif.py  ookladatadownload.py  pyproject.toml  pyquadkey_raster_layer.py  requirements.txt  run.py
archive/: geoparquettogpkg.py
archive/raster layer practice/: cru_output.tif.aux.xml
data/datasets/: STORAGE_DISCLAIMER.txt  dataset_disclaimer.txt
raster tests/: cru.pre.2022.tif  cru.pre.2022.tif.aux.xml  cru_output.tif  cru_tiff_practice.py
src/: convert_populate.py  dataset_download.py  download_dataset.py  generate_raster.py  helpers.py  make_geopackage.py  make_raster.py  transform_populate.py
src/unused/: metadata_creation.py  stacking_logic.py
src/utils/: helpers.py  loggers.py
visualizations/: total_band_raster_1.tif
