[project]
name = "ookla-raster-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyquadkey2>=0.3.2",
    "rasterio>=1.4.3",
    "tqdm>=4.67.1",
]
