[project]
name = "ookla-raster-dataset"
version = "0.1.0"
description = "TOML for Ookla Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.79",
    "botocore>=1.42.79",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyarrow>=20.0.0",
    "pyquadkey2>=0.3.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
